avoid cropping images

--- a/src/client/components/WidgetContainer/widgets/BestRatedWorksWidget/scss/compactWorkElement.component.scss
+++ b/src/client/components/WidgetContainer/widgets/BestRatedWorksWidget/scss/compactWorkElement.component.scss
@@ -34,7 +34,7 @@
   }
 
   .compact-work-element--artwork-container > img {
-    height: 200px;
+    max-height: 200px;
     max-width: 133px;
     object-fit: cover;
   }
